--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,143 @@ dist.dir=dist
 dist.jar=${dist.dir}/FinalSimpleClasses.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.aopalliance-repackaged-2.5.0-b42.jar=C:\\Users\\cdw20\\Desktop\\aopalliance-repackaged-2.5.0-b42.jar
+file.reference.aopalliance-repackaged-2.5.0-b42.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\aopalliance-repackaged-2.5.0-b42.jar
+file.reference.cdi-api-1.1.jar=C:\\Users\\cdw20\\Desktop\\cdi-api-1.1.jar
+file.reference.cdi-api-1.1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\cdi-api-1.1.jar
+file.reference.el-api-2.2.jar=C:\\Users\\cdw20\\Desktop\\el-api-2.2.jar
+file.reference.el-api-2.2.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\el-api-2.2.jar
+file.reference.gson-2.8.2-javadoc.jar=C:\\Users\\cdw20\\Downloads\\gson-2.8.2-javadoc.jar
+file.reference.gson-2.8.5.jar=C:\\Users\\cdw20\\Desktop\\jars\\gson-2.8.5.jar
+file.reference.hk2-api-2.5.0-b42.jar=C:\\Users\\cdw20\\Desktop\\hk2-api-2.5.0-b42.jar
+file.reference.hk2-api-2.5.0-b42.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\hk2-api-2.5.0-b42.jar
+file.reference.hk2-locator-2.5.0-b42.jar=C:\\Users\\cdw20\\Desktop\\hk2-locator-2.5.0-b42.jar
+file.reference.hk2-locator-2.5.0-b42.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\hk2-locator-2.5.0-b42.jar
+file.reference.hk2-utils-2.5.0-b42.jar=C:\\Users\\cdw20\\Desktop\\hk2-utils-2.5.0-b42.jar
+file.reference.hk2-utils-2.5.0-b42.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\hk2-utils-2.5.0-b42.jar
+file.reference.javassist-3.22.0-CR2.jar=C:\\Users\\cdw20\\Desktop\\javassist-3.22.0-CR2.jar
+file.reference.javassist-3.22.0-CR2.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javassist-3.22.0-CR2.jar
+file.reference.javax.annotation-api-1.2.jar=C:\\Users\\cdw20\\Desktop\\javax.annotation-api-1.2.jar
+file.reference.javax.annotation-api-1.2.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.annotation-api-1.2.jar
+file.reference.javax.inject-1.jar=C:\\Users\\cdw20\\Desktop\\javax.inject-1.jar
+file.reference.javax.inject-1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.inject-1.jar
+file.reference.javax.inject-2.5.0-b42.jar=C:\\Users\\cdw20\\Desktop\\javax.inject-2.5.0-b42.jar
+file.reference.javax.inject-2.5.0-b42.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.inject-2.5.0-b42.jar
+file.reference.javax.json-1.0.jar=C:\\Users\\cdw20\\Desktop\\jars\\javax.json-1.0.jar
+file.reference.javax.json-1.1.jar=C:\\Users\\cdw20\\Desktop\\javax.json-1.1.jar
+file.reference.javax.json-1.1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.json-1.1.jar
+file.reference.javax.json-api-1.1.jar=C:\\Users\\cdw20\\Desktop\\javax.json-api-1.1.jar
+file.reference.javax.json-api-1.1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.json-api-1.1.jar
+file.reference.javax.json.bind-api-1.0.jar=C:\\Users\\cdw20\\Desktop\\javax.json.bind-api-1.0.jar
+file.reference.javax.json.bind-api-1.0.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.json.bind-api-1.0.jar
+file.reference.javax.servlet-api-3.0.1.jar=C:\\Users\\cdw20\\Desktop\\javax.servlet-api-3.0.1.jar
+file.reference.javax.servlet-api-3.0.1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\javax.servlet-api-3.0.1.jar
+file.reference.javax.ws.rs-api-2.1.jar=C:\\Users\\cdw20\\Downloads\\javax.ws.rs-api-2.1.jar
+file.reference.jaxb-api-2.2.7.jar=C:\\Users\\cdw20\\Desktop\\jaxb-api-2.2.7.jar
+file.reference.jaxb-api-2.2.7.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jaxb-api-2.2.7.jar
+file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar=C:\\Users\\cdw20\\Desktop\\jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar
+file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar
+file.reference.jersey-client.jar=C:\\Users\\cdw20\\Downloads\\jersey-client.jar
+file.reference.jersey-common.jar=C:\\Users\\cdw20\\Desktop\\jersey-common.jar
+file.reference.jersey-common.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-common.jar
+file.reference.jersey-container-servlet-core.jar=C:\\Users\\cdw20\\Desktop\\jersey-container-servlet-core.jar
+file.reference.jersey-container-servlet-core.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-container-servlet-core.jar
+file.reference.jersey-container-servlet.jar=C:\\Users\\cdw20\\Desktop\\jersey-container-servlet.jar
+file.reference.jersey-container-servlet.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-container-servlet.jar
+file.reference.jersey-hk2.jar=C:\\Users\\cdw20\\Desktop\\jersey-hk2.jar
+file.reference.jersey-hk2.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-hk2.jar
+file.reference.jersey-media-jaxb.jar=C:\\Users\\cdw20\\Desktop\\jersey-media-jaxb.jar
+file.reference.jersey-media-jaxb.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-media-jaxb.jar
+file.reference.jersey-media-json-binding.jar=C:\\Users\\cdw20\\Desktop\\jersey-media-json-binding.jar
+file.reference.jersey-media-json-binding.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-media-json-binding.jar
+file.reference.jersey-media-sse.jar=C:\\Users\\cdw20\\Desktop\\jersey-media-sse.jar
+file.reference.jersey-media-sse.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-media-sse.jar
+file.reference.jersey-server.jar=C:\\Users\\cdw20\\Desktop\\jersey-server.jar
+file.reference.jersey-server.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jersey-server.jar
+file.reference.jsr250-api-1.0.jar=C:\\Users\\cdw20\\Desktop\\jsr250-api-1.0.jar
+file.reference.jsr250-api-1.0.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\jsr250-api-1.0.jar
 file.reference.mssql-jdbc-7.0.0.jre10.jar=C:\\Users\\ethan\\Desktop\\SAS\\sqljdbc_7.0\\enu\\mssql-jdbc-7.0.0.jre10.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar=C:\\Users\\ethan\\Desktop\\SAS\\sqljdbc_7.0\\enu\\mssql-jdbc-7.0.0.jre8.jar
+file.reference.org.osgi.core-4.2.0.jar=C:\\Users\\cdw20\\Desktop\\org.osgi.core-4.2.0.jar
+file.reference.org.osgi.core-4.2.0.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\org.osgi.core-4.2.0.jar
+file.reference.osgi-resource-locator-1.0.1.jar=C:\\Users\\cdw20\\Desktop\\osgi-resource-locator-1.0.1.jar
+file.reference.osgi-resource-locator-1.0.1.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\osgi-resource-locator-1.0.1.jar
+file.reference.persistence-api-1.0.jar=C:\\Users\\cdw20\\Desktop\\persistence-api-1.0.jar
+file.reference.persistence-api-1.0.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\persistence-api-1.0.jar
+file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\cdw20\\Desktop\\validation-api-1.1.0.Final.jar
+file.reference.validation-api-1.1.0.Final.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\validation-api-1.1.0.Final.jar
+file.reference.yasson-1.0.jar=C:\\Users\\cdw20\\Desktop\\yasson-1.0.jar
+file.reference.yasson-1.0.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\yasson-1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
-    ${file.reference.mssql-jdbc-7.0.0.jre10.jar}
+    ${file.reference.mssql-jdbc-7.0.0.jre10.jar}:\
+    ${file.reference.aopalliance-repackaged-2.5.0-b42.jar}:\
+    ${file.reference.cdi-api-1.1.jar}:\
+    ${file.reference.el-api-2.2.jar}:\
+    ${file.reference.hk2-api-2.5.0-b42.jar}:\
+    ${file.reference.hk2-locator-2.5.0-b42.jar}:\
+    ${file.reference.hk2-utils-2.5.0-b42.jar}:\
+    ${file.reference.javassist-3.22.0-CR2.jar}:\
+    ${file.reference.javax.annotation-api-1.2.jar}:\
+    ${file.reference.javax.inject-1.jar}:\
+    ${file.reference.javax.inject-2.5.0-b42.jar}:\
+    ${file.reference.javax.json-1.1.jar}:\
+    ${file.reference.javax.json-api-1.1.jar}:\
+    ${file.reference.javax.json.bind-api-1.0.jar}:\
+    ${file.reference.javax.servlet-api-3.0.1.jar}:\
+    ${file.reference.jaxb-api-2.2.7.jar}:\
+    ${file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar}:\
+    ${file.reference.jersey-common.jar}:\
+    ${file.reference.jersey-container-servlet-core.jar}:\
+    ${file.reference.jersey-container-servlet.jar}:\
+    ${file.reference.jersey-hk2.jar}:\
+    ${file.reference.jersey-media-jaxb.jar}:\
+    ${file.reference.jersey-media-json-binding.jar}:\
+    ${file.reference.jersey-media-sse.jar}:\
+    ${file.reference.jersey-server.jar}:\
+    ${file.reference.jsr250-api-1.0.jar}:\
+    ${file.reference.org.osgi.core-4.2.0.jar}:\
+    ${file.reference.osgi-resource-locator-1.0.1.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${file.reference.yasson-1.0.jar}:\
+    ${file.reference.gson-2.8.2-javadoc.jar}:\
+    ${file.reference.javax.ws.rs-api-2.1.jar}:\
+    ${file.reference.jersey-client.jar}:\
+    ${file.reference.aopalliance-repackaged-2.5.0-b42.jar-1}:\
+    ${file.reference.cdi-api-1.1.jar-1}:\
+    ${file.reference.el-api-2.2.jar-1}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.hk2-api-2.5.0-b42.jar-1}:\
+    ${file.reference.hk2-locator-2.5.0-b42.jar-1}:\
+    ${file.reference.hk2-utils-2.5.0-b42.jar-1}:\
+    ${file.reference.javassist-3.22.0-CR2.jar-1}:\
+    ${file.reference.javax.annotation-api-1.2.jar-1}:\
+    ${file.reference.javax.inject-1.jar-1}:\
+    ${file.reference.javax.inject-2.5.0-b42.jar-1}:\
+    ${file.reference.javax.json-1.0.jar}:\
+    ${file.reference.javax.json-1.1.jar-1}:\
+    ${file.reference.javax.json-api-1.1.jar-1}:\
+    ${file.reference.javax.json.bind-api-1.0.jar-1}:\
+    ${file.reference.javax.servlet-api-3.0.1.jar-1}:\
+    ${file.reference.jaxb-api-2.2.7.jar-1}:\
+    ${file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar-1}:\
+    ${file.reference.jersey-common.jar-1}:\
+    ${file.reference.jersey-container-servlet-core.jar-1}:\
+    ${file.reference.jersey-container-servlet.jar-1}:\
+    ${file.reference.jersey-hk2.jar-1}:\
+    ${file.reference.jersey-media-jaxb.jar-1}:\
+    ${file.reference.jersey-media-json-binding.jar-1}:\
+    ${file.reference.jersey-media-sse.jar-1}:\
+    ${file.reference.jersey-server.jar-1}:\
+    ${file.reference.jsr250-api-1.0.jar-1}:\
+    ${file.reference.org.osgi.core-4.2.0.jar-1}:\
+    ${file.reference.osgi-resource-locator-1.0.1.jar-1}:\
+    ${file.reference.persistence-api-1.0.jar-1}:\
+    ${file.reference.validation-api-1.1.0.Final.jar-1}:\
+    ${file.reference.yasson-1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
