--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.el-api-2.2.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\el-api-2.2.jar
 file.reference.el-api-2.2.jar-2=C:\\Users\\ethan\\Desktop\\JARs\\ext\\el-api-2.2.jar
 file.reference.gson-2.8.2-javadoc.jar=C:\\Users\\cdw20\\Downloads\\gson-2.8.2-javadoc.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\ethan\\Downloads\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\cdw20\\Downloads\\gson-2.8.2.jar
 file.reference.gson-2.8.5.jar=C:\\Users\\cdw20\\Desktop\\jars\\gson-2.8.5.jar
 file.reference.hk2-api-2.5.0-b42.jar=C:\\Users\\cdw20\\Desktop\\hk2-api-2.5.0-b42.jar
 file.reference.hk2-api-2.5.0-b42.jar-1=C:\\Users\\cdw20\\Desktop\\jars\\hk2-api-2.5.0-b42.jar
@@ -229,7 +230,8 @@ javac.classpath=\
     ${file.reference.jersey-media-json-binding.jar-2}:\
     ${file.reference.jersey-media-sse.jar-2}:\
     ${file.reference.jersey-server.jar-2}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
